# kachi

./: .gitignore  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/kachi/: __init__.py  main.py  schemas.py
src/kachi/rules/: azure_email.yml  barracuda.yml  esvalabs.yml  fireeye.yml  o365_safelinks.yml  proofpoint_v1.yml  proofpoint_v2.yml  ses_awstrack.yml  sophos.yml  trendmicro.yml  urldefense_v3.yml  whatsapp.yml
tests/: test_main.py
